# xrift-studio

./: .gitignore  .mcp.json  .npmrc  AGENT.md  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  THIRD_PARTY_ASSETS.md  e2e.html  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  preview.html  tsconfig.e2e.json  tsconfig.electron.json  vite.cli.config.mjs  vite.config.ts  vite.preview.config.ts
.agents/skills/xrift-studio-feature/: SKILL.md
.agents/skills/xrift-studio-verify/: SKILL.md
.claude/: settings.json
.claude/skills/xrift-studio-feature/: SKILL.md
.claude/skills/xrift-studio-ux/: SKILL.md
.claude/skills/xrift-studio-verify/: SKILL.md
.github/workflows/: pages.yml  release.yml
cli/: convert.fixture.mjs  convert.mjs  main.mjs
dev/: catalog-thumbnail-generator.html
docs/: EDITOR_INSPECTOR_DESIGN.md  KHR_INTERACTIVITY_EDITOR.md  MODEL_IMPORT_CONTRACT.md  OPENBRUSH_MATERIAL_PROVIDER_DESIGN.md  RELEASE_E2E.md  UNITY_PACKAGE_IMPORT.md  UX_INTERACTIONS.md  UX_PRINCIPLES.md  VISUAL_EDITOR_ARCHITECTURE.md  VISUAL_EDITOR_ROADMAP.md  VISUAL_PROJECT_MIGRATION_CLI.md
e2e/: release-gate.spec.ts
electron/: main.ts  preload.ts
public/visual-editor/openbrush/: SOURCE.md
public/visual-editor/starter-assets/: ATTRIBUTION.md  log-bench.glb  mug.glb  studio-guide-bench.glb  studio-guide-globe.glb  studio-guide-gltf-door.glb  studio-guide-information-board.glb  studio-guide-interaction-door.glb  studio-guide-laptop.glb  studio-guide-planter.glb  studio-guide-telescope.glb  studio-guide-vr-headset.glb  torii-gate.glb  wine-glass.glb  xrift-world-template-bunny.glb
scripts/: generate-studio-guide-door-assets.py  prepare-mcp-sidecar.mjs  sync-xrift-official-starter-assets.mjs
skills/xrift-studio-ux/: SKILL.md
src/: App.tsx  PreviewApp.tsx  catalog-thumbnail-generator.tsx  index.css  main.tsx  preview.css  preview.tsx  release-e2e.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: external_store.rs  lib.rs  main.rs  mcp.rs
src/components/: AboutModal.tsx  AppUpdateDialog.tsx  Brand.tsx  ConfirmDialog.tsx  EditorPane.tsx  EditorView.tsx  FileTree.tsx  ImageViewer.tsx  LogsPane.tsx  ModelViewer.tsx  NewProjectDialog.tsx  NewWorldDialog.tsx  ProjectCard.tsx  ProjectLibrary.tsx  PublishReadinessDialog.tsx  SetupView.tsx  ThumbnailEditor.tsx  ThumbnailEditorModal.tsx  Toast.tsx  UpdateDialog.tsx  UserMenu.tsx  XriftJsonEditor.tsx
src/lib/: app-updater.ts  backend-electron.ts  backend-tauri.ts  backend.ts  project-thumbnail.ts  publish-readiness.ts  semver.ts  tauri.ts  vite-preload-recovery.ts  xrift-cli.ts
src/lib/visual-editor/: document-id.ts  (+74 more)
src/release-e2e/: mock-tauri.ts
src/types/: draco3dgltf.d.ts
(+103 files in other folders)
