[package]
name = "xrift-studio"
version = "0.1.0"
description = "Official desktop launcher for XRift world creators"
authors = ["XRift"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xrift_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

[profile.release]
opt-level = "s"
panic = "abort"
strip = true

