[package]
name = "xrift-studio"
version = "0.4.0"
description = "Community-built desktop app for creating XRift worlds and items"
authors = ["xrift-studio contributors"]
license = "MIT"
edition = "2021"
default-run = "xrift-studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xrift_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-mcp-bridge = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
opt-level = "s"
panic = "abort"
strip = true
